1. Profile with lastwatched 2. Flurry related interface 3. Facebook SDK update 4. Feedback prompt for first time login